--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <p>I'm learning CSS!</p>
     <p id="trial">Let us see what happens</p>
-    <p id="trial">Hello, World</p>
+    <p id="trial">Hello</p>
     <h1>Hello</h1>
     <h2>World</h2>
     <p>My name is <span>boluwatife</span></p>
