My third commit amended

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>I'm learning CSS!</p>
     <p id="trial">Let us see what happens</p>
     <p id="trial">Hello</p>
-    <h1>Hello</h1>
+    <h1>Hello Baby</h1>
     <h2>World</h2>
     <p>My name is <span>boluwatife</span></p>
   </body>
